<resources>
    <string name="app_name">Hoco</string>
    <string name="str_connect">Kết nối</string>
    <string name="str_sign_out">Đăng xuất</string>
    <string name="str_title_activity_config_server_connection">Kết nối</string>
    <string name="str_host_name" translatable="false">host</string>
    <string name="str_port" translatable="false">port</string>
    <string name="str_save">Lưu</string>
    <string name="str_save_success">Lưu thành công</string>
    <string name="str_no">Không</string>
    <string name="str_yes">Có</string>
    <string name="str_confirm_log_out">Bạn muốn đăng xuất?</string>
    <string name="str_about_app">Thông tin ứng dụng</string>
    <string name="str_setting">Cài đặt</string>
    <string name="str_app_info">Thông tin ứng dụng</string>
    <string name="str_version">Phiên bản:</string>
    <string name="str_dev">Nhà phát triển:</string>
    <string name="str_contact">Liên hệ:</string>
    <string name="str_mail_support" translatable="false">support@hoco.com</string>
    <string name="str_build_time" translatable="false">Build time:</string>
    <string name="str_user_name">Tên đăng nhập</string>
    <string name="str_login">Đăng nhập</string>
    <string name="str_password">Mật khẩu</string>
    <string name="str_setting_connect">Cài đặt kết nối</string>
    <string name="str_setting_lock_app">Thiết lập khóa ứng dụng</string>
    <string name="str_help">Trợ giúp</string>
    <string name="str_app_update">Cập nhật ứng dụng</string>
    <string name="str_device_setting">Cài đặt thiết bị</string>
    <string name="str_sign_up">Đăng ký</string>
    <string name="str_reenter_password">Nhập lại mật khẩu</string>
    <string name="str_connect_string">"Chuỗi kết nối "</string>
    <string name="str_change_password">Đổi mật khẩu</string>
    <string name="str_current_password">Mật khẩu hiện tại</string>
    <string name="str_new_password">Mật khẩu mới</string>
    <string name="str_reenter_new_password">Nhập lại mật khẩu mới</string>
    <string name="str_create_new_passcode">Tạo mới</string>
    <string name="str_sign_turn_off_app_lock">Tắt khóa ứng dụng</string>
    <string name="str_confirm_unlock_passcode">"Bạn muốn bỏ khóa ứng dụng? "</string>
    <string name="str_change_pass_code">Đổi mã khóa</string>
    <string name="str_change_language">Ngôn ngữ</string>
    <string name="str_tieng_viet" translatable="false">Tiếng Việt</string>
    <string name="str_english" translatable="false">English</string>
    <string name="str_login_with_google">Đăng nhập với Google</string>
    <string name="str_setting_managing_access">Quản lí truy cập</string>
    <string name="str_gmail_account" translatable="false">hoco@gmail.com</string>
    <string name="str_dialog_add_new_account_message"> Nhập tài khoản Gmail muốn chia sẻ vào ô bên dưới.</string>
    <string name="str_ok" translatable="false">Ok</string>
    <string name="str_cancel">Hủy</string>
    <string name="str_agree">Đồng ý</string>
    <string name="str_confirm_remove_account_shared">Bạn muốn xóa &lt;br> &lt;b>%s&lt;/b> &lt;br>khỏi danh sách truy cập hệ thống?</string>
    <string name="str_error_account_share_have_to_difference_current_account">Bạn không thể tự chia sẻ cho chính mình!</string>
    <string name="str_error_message_connection_string_invalid">Tài khoản của bạn chưa được kết nối với hệ thống. Vui lòng liên hệ với quản lí hệ thống của bạn.</string>
    <string name="close">Đóng</string>
</resources>