<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigServerActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_main"
        android:elevation="4dp"
        android:background="@color/teal_700"
        app:title="@string/str_title_activity_config_server_connection"
        app:titleTextColor="@color/white"/>

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_background_white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/str_host_name"/>

    <EditText
        android:id="@+id/txt_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_background_white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/str_port"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save_server_config"
        android:background="@drawable/background_button_blue_1"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/str_save"
        />

</LinearLayout>