<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_dark"
        android:elevation="4dp"
        app:title="@string/str_change_password"
        app:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/txt_current_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:background="@drawable/radius_background_white"
        android:hint="@string/str_current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/login_edt_text_size"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/txt_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:background="@drawable/radius_background_white"
        android:hint="@string/str_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_current_password"
        android:textSize="@dimen/login_edt_text_size"
        android:layout_marginTop="17dp"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/txt_reenter_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:background="@drawable/radius_background_white"
        android:hint="@string/str_reenter_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_new_password"
        android:textSize="@dimen/login_edt_text_size"
        android:layout_marginTop="17dp"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="@dimen/login_edit_height"
        android:id="@+id/btn_sign_up"
        android:background="@drawable/background_white_border_radius_1"
        android:textColor="@color/main_dark"
        android:text="@string/str_change_password"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_reenter_password"
        android:textSize="@dimen/login_edt_text_size"
        android:layout_marginTop="17dp"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</androidx.constraintlayout.widget.ConstraintLayout>