<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_dark"
        android:elevation="4dp"
        app:title="@string/str_sign_up"
        app:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edit_height"
            android:background="@drawable/radius_background_white"
            android:hint="@string/str_user_name"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/login_edt_text_size"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edit_height"
            android:background="@drawable/radius_background_white"
            android:hint="@string/str_password"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_user_name"
            android:textSize="@dimen/login_edt_text_size"
            android:layout_marginTop="17dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txt_reenter_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edit_height"
            android:background="@drawable/radius_background_white"
            android:hint="@string/str_reenter_password"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            android:textSize="@dimen/login_edt_text_size"
            android:layout_marginTop="17dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/txt_connect_string"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edit_height"
            android:background="@drawable/radius_background_white"
            android:hint="@string/str_connect_string"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_reenter_password"
            android:textSize="@dimen/login_edt_text_size"
            android:layout_marginTop="17dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edit_height"
            android:id="@+id/btn_sign_up"
            android:background="@drawable/background_white_border_radius_1"
            android:textColor="@color/main_dark"
            android:text="@string/str_sign_up"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_connect_string"
            android:textSize="@dimen/login_edt_text_size"
            android:layout_marginTop="17dp"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/gray"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>