<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_dark"
        android:elevation="4dp"
        app:title="@string/str_app_info"
        app:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/icon_app"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/icon_app"
                android:text="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                android:id="@+id/txt_build_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/str_version"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="1.0.0"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/divider_version"
                app:layout_constraintStart_toEndOf="@id/txt_version"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/txt_version_value"/>

            <View
                android:id="@+id/divider_version"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/txt_version"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/layout_build_time">

            <TextView
                android:id="@+id/txt_build_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/str_build_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/txt_build_time"
                app:layout_constraintStart_toEndOf="@id/txt_build_time"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/txt_build_time_value"/>

            <View
                android:id="@+id/divider_build_time"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/txt_build_time"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/txt_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/str_dev"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_name"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/divider_dev"
                app:layout_constraintStart_toEndOf="@id/txt_dev"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider_dev"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/txt_dev"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/txt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/str_contact"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/str_mail_support"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/divider_contact"
                app:layout_constraintStart_toEndOf="@id/txt_contact"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider_contact"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/txt_contact"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>